mainのprofireの箱作成

--- a/index.html
+++ b/index.html
@@ -26,5 +26,48 @@
     </h1>
   </header>
   
+  <!--meinタグの作成
+    ・profile用とwork用の箱を作成する
+    ・divタグをつかう
+  -->
+
+<div class="block-main">
+  <!--
+    plofile用の箱
+  -->
+  <div class="box-profile">
+    <H2 class="sub-title">
+      <span class="color-green">P</span>rofile
+    </H2>
+    <div class="item-rist">
+      <img src="img/目開口開.jpg" alt="プロフィール画像">
+      <b>テック　太郎</b>
+      <p class="color-green">HTML/CSS/PHP/MySQL/Lraver/AdobeDX</p>
+      <p>
+        ここにテキストが入りますここにテキストが入りますここにテキストが入りますここにテキストが入りますここにテキストが入ります
+      </p>
+    </div>
+    <ul class="icon-rist">
+      <li>
+        <a href="">
+          <img src="img/github.svg" alt="Ｇｉｔｈａｂアイコン">
+        </a>
+      </li>
+      <li>
+        <a href="">
+          <img src="img/twitter.svg" alt="Twtteアイコン">
+        </a>
+      </li>
+    </ul>
+
+  </div>
+
+  <!--
+    work用の箱
+  -->
+  <div>
+
+  </div>
+</div>
 </body>
 </html>
