index.html style.css 変更

--- a/index.html
+++ b/index.html
@@ -65,9 +65,51 @@
   <!--
     work用の箱
   -->
-  <div>
-
+  <div class="box-works">
+  <h2 class="sub-title">
+    <span class="color-green">W</span>orks
+  </h2>
+  <ul class="works-rist">
+   <li>
+      <img src="img/スクリーンショット (1).pn" alt="画像">
+      <h3>twitterクローン</h3>
+      <span>HTML/CSS/PHP/MyQOL</span>
+      <div class="link">
+        <a href="">Webサイト</a>
+        <a href="">github</a>
+      </div>
+   </li>
+   <li>
+      <img src="img/スクリーンショット (1).png" alt="画像">
+      <h3>twitterクローン</h3>
+      <span>HTML/CSS/PHP/MyQOL</span>
+      <div class="link">
+        <a href="">Webサイト</a>
+        <a href="">github</a>
+      </div>
+   </li>
+   <li>
+      <img src="img/スクリーンショット (1).pn" alt="画像">
+      <h3>twitterクローン</h3>
+      <span>HTML/CSS/PHP/MyQOL</span>
+      <div class="link">
+        <a href="">Webサイト</a>
+        <a href="">github</a>
+      </div>
+   </li>
+  </ul>
   </div>
 </div>
+
+<!--
+  フッターの作成
+  ・copyrightの設定
+  →Pタグ
+-->
+
+<footer class="block-footer">
+  <p>copyright ©THCH.I.S.,Inc.</p>
+</footer>
+
 </body>
 </html>
