レスポンシブ対応

--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <!--レスポンシブのルール
+      ・viewportの設定
+      ・
+    -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!--このサイトは何か　説明する場所-->
   <meta neme="desclipthon" content="Mayuの自己紹介">
@@ -71,7 +75,7 @@
   </h2>
   <ul class="works-rist">
    <li>
-      <img src="img/スクリーンショット (1).pn" alt="画像">
+      <img src="" alt="画像">
       <h3>twitterクローン</h3>
       <span>HTML/CSS/PHP/MyQOL</span>
       <div class="link">
@@ -80,7 +84,7 @@
       </div>
    </li>
    <li>
-      <img src="img/スクリーンショット (1).png" alt="画像">
+      <img src="" alt="画像">
       <h3>twitterクローン</h3>
       <span>HTML/CSS/PHP/MyQOL</span>
       <div class="link">
@@ -89,7 +93,7 @@
       </div>
    </li>
    <li>
-      <img src="img/スクリーンショット (1).pn" alt="画像">
+      <img src="" alt="画像">
       <h3>twitterクローン</h3>
       <span>HTML/CSS/PHP/MyQOL</span>
       <div class="link">
