--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
   <h2 class="sub-title">
     <span class="color-green">W</span>orks
   </h2>
-  <ul class="works-rist">
+  <ul class="works-list">
    <li>
       <img src="" alt="画像">
       <h3>twitterクローン</h3>
